@@ -52,22 +52,9 @@ describe AccountsController do
         response.should render_template("accounts/show")
       end
 
-      it "should create a new activity when viewing the account" do
+      it "should update an activity when viewing the account" do
+        Activity.should_receive(:stamp).with(@current_user, @account, :viewed).once
         get :show, :id => @account.id
-        @activity = Activity.find(:first, :conditions => [ "user_id=? AND subject_id=? AND subject_type=? AND action='viewed'", @current_user.id, @account.id, "Account" ])
-        @activity.should_not == nil
-        @activity.info.should == @account.name
-      end
-
-      it "should update existing activity when viewing the account" do
-        @viewed = Factory(:activity, :subject => @account, :action => "viewed", :user => @current_user)
-
-        get :show, :id => @account.id
-        @activity = Activity.find(:all, :conditions => [ "user_id=? AND subject_id=? AND subject_type=? AND action='viewed'", @current_user.id, @account.id, "Account" ])
-  
-        @activity.should_not == nil
-        @activity.size.should == 1
-        @activity[0].updated_at.to_s(:db).should == Time.now.to_s(:db)
       end
 
     end
