@@ -4,6 +4,10 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Wed, Apr 15, 2009
+---------------------------------------------------------------------
+- Creating, updating, or deleting core assets also updates recently viewed items list.
+
 Tue, Apr 14, 2009
 ---------------------------------------------------------------------
 - Fixed missing uuid generation caused by observing models.
